Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8681

osd: ignore ENODATA during unlink agent parent

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      If the directory is created before 2.0, there are no LMA
      for the directory, then osd_delete_from_remote_parent()
      will return ENODATA. So we should ignore ENODATA in this
      case otherwise it will cause unlink fails.

            niu Niu Yawei (Inactive)
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: